# pinn_benchmark

./: .gitignore  README.md  plot_results.py  pyproject.toml  train.py  代码复现检查报告.md  修复建议.md  启动  训练问题诊断.md  误差计算检查.md
setpinn/: analytical_sol.py  data.py  losses.py  util.py
setpinn/models/: LBFGS.py  Symbolic_KANLayer.py  __init__.py  fls.py  kan.py  pinn.py  pinn_gpt.py  pinnsformer.py  pinnsformer_enc.py  qres.py  setpinns.py  tf_enc.py  utils.py
